some bit of progress

--- a/_base.scss
+++ b/_base.scss
@@ -4,3 +4,5 @@ $font: "Arial Black", Gadget, sans-serif;
 $fbold: bold;
 $blue: #c4d5ed;
 $dropcolor: #f1f1f1;
+$hoverlight: #999;
+$hoverdark: #333;
