--- a/_navbar.scss
+++ b/_navbar.scss
@@ -20,27 +20,27 @@ nav {
     margin-top: 10px;
   }
   .active:hover {
-    background-color: #ccc;
+    background-color: base.$hoverlight;
   }
 
   .nav {
     width: 100%;
     justify-content: space-around;
     position: relative;
-    border: 2px solid #000000;
-    background-color: var(--blue);
+    border: 2px solid base.$black;
+    background-color: base.$blue;
     box-sizing: border-box;
     transition: max-height 0.5s ease-out;
     text-decoration: inherit;
-    font-family: var(--font);
-    font-weight: var(--f-bold);
+    font-family: base.$font;
+    font-weight: base.$fbold;
     line-height: 28.8px;
-    color: #000000;
+    color: base.$black;
   }
   .dropbtn {
-    background-color: var(--blue);
-    color: var(--black);
-    font-weight: var(--f-bold);
+    background-color: base.$blue;
+    color: base.$black;
+    font-weight: base.$fbold;
     padding: 10px;
     font-size: 24px;
     border: none;
