--- a/_base.scss
+++ b/_base.scss
@@ -1,8 +1,9 @@
 $black: #000;
 $white: #fff;
-$font: "Arial Black", Gadget, sans-serif;
-$fbold: bold;
 $blue: #c4d5ed;
 $dropcolor: #f1f1f1;
 $hoverlight: #999;
 $hoverdark: #333;
+$font: "Arial Black", Gadget, sans-serif;
+$font_0: "Arial", Gadget, sans-serif;
+$fbold: bold;
