--- a/_navbar.scss
+++ b/_navbar.scss
@@ -1,9 +1,8 @@
 @use "base";
-
 nav {
   .menu {
     cursor: pointer;
-    display: flex;
+    // display: flex;
     justify-content: center;
     width: 100%;
     height: 100%;
@@ -102,7 +101,7 @@ nav {
   }
 
   .dropdown-content1 a {
-    color: black;
+    color: base.$black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -284,62 +283,62 @@ nav {
     background-color: darkgrey;
   }
 
-  .genre {
-    /* width: 100%;
-  height: 100%; */
-    color: black;
-    font-size: 24px;
-    font-family: var(--font);
-    font-weight: var(--f-bold);
-    line-height: 28.8px;
-    word-wrap: break-word;
+  // .menu-txt {
+  //   color: base.$black;
+  //   font-size: 24px;
+  //   font-family: base.$font;
+  //   padding: 10px;
+  // }
+  // .genre {
+  //   color: base.$black;
+  //   font-size: 24px;
+  //   font-family: base.$font;
+  //   // font-weight: var(--f-bold);
+  //   padding: 10px;
+  // }
+  // .billeder {
+  //   /* width: 100%;
+  // height: 100%; */
+  //   color: black;
+  //   font-size: 24px;
+  //   font-family: var(--font);
+  //   font-weight: var(--f-bold);
+  //   line-height: 28.8px;
+  //   word-wrap: break-word;
+  //   padding: 10px;
+  // }
+  // .info {
+  //   color: black;
+  //   font-size: 24px;
+  //   font-family: var(--font);
+  //   font-weight: var(--f-bold);
+  //   line-height: 28.8px;
+  //   word-wrap: break-word;
+  //   padding: 10px;
+  // }
+  // .kontakt {
+  //   color: black;
+  //   font-size: 24px;
+  //   font-family: var(--font);
+  //   font-weight: var(--f-bold);
+  //   padding: 10px;
+  // }
+  // .sog {
+  //   color: black;
+  //   font-size: 24px;
+  //   font-family: var(--font);
+  //   font-weight: var(--f-bold);
+  //   line-height: 28.8px;
+  //   padding: 10px;
+  // }
 
-    padding: 10px;
-    /* border: 1px solid #000000; */
-  }
-  .billeder {
-    /* width: 100%;
-  height: 100%; */
-    color: black;
-    font-size: 24px;
-    font-family: var(--font);
-    font-weight: var(--f-bold);
-    line-height: 28.8px;
-    word-wrap: break-word;
-    padding: 10px;
-  }
-  .info {
-    color: black;
-    font-size: 24px;
-    font-family: var(--font);
-    font-weight: var(--f-bold);
-    line-height: 28.8px;
-    word-wrap: break-word;
-    padding: 10px;
-  }
-  .kontakt {
-    color: black;
-    font-size: 24px;
-    font-family: var(--font);
-    font-weight: var(--f-bold);
-    padding: 10px;
-  }
-  .sog {
-    color: black;
-    font-size: 24px;
-    font-family: var(--font);
-    font-weight: var(--f-bold);
-    line-height: 28.8px;
-    padding: 10px;
-  }
-
-  .menu_inside {
-    color: black;
-    font-size: 24px;
-    font-family: var(--font);
-    font-weight: var(--f-bold);
-    padding: 10px;
-  }
+  // .menu_inside {
+  //   color: black;
+  //   font-size: 24px;
+  //   font-family: var(--font);
+  //   font-weight: var(--f-bold);
+  //   padding: 10px;
+  // }
 
   .sog:hover .searchbtn {
     background-color: darkgrey;
@@ -369,6 +368,12 @@ nav {
     text-align: end;
   }
   .menu_x_btn {
+    padding: 24px;
+    cursor: pointer;
+    font-size: xx-large;
+    text-align: end;
+  }
+  .x_btn {
     padding: 24px;
     cursor: pointer;
     font-size: xx-large;
