solved a few issues.. logo, hidding insidemenu in two layouts

--- a/_header.scss
+++ b/_header.scss
@@ -40,7 +40,7 @@ header {
     border: base.$black 8px solid;
     border-radius: 5px;
     margin-right: 10px;
-    background-color: base.$black;
+    background-color: base.$blue;
   }
 
   .logolink {
