--- a/_media.scss
+++ b/_media.scss
@@ -1,9 +1,6 @@
 @use "base";
 /* dropdown5 = menu_inside */
 @media screen and (max-width: 743px) {
-  body {
-    margin: 10px;
-  }
   .dropdown5 {
     display: none;
   }
@@ -11,9 +8,11 @@
     display: flex;
     max-height: 0;
     overflow: hidden;
+    justify-content: center;
     padding-left: 160px;
     padding-right: 160px;
     margin-top: -3px;
+    // align-items: flex-start;
   }
   .bluebox {
     display: none;
@@ -27,10 +26,6 @@
 }
 
 @media screen and (min-width: 744px) {
-  body {
-    margin: 10px;
-  }
-
   .dropdown5 {
     display: flex;
   }
@@ -77,15 +72,13 @@
   }
 }
 @media screen and (min-width: 1100px) {
-  body {
-    margin: 10px;
-  }
   .dropdown5 {
     display: none;
   }
   .nav {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     margin-top: 10px;
   }
   .menu {
