--- a/index.css
+++ b/index.css
@@ -1,9 +1,6 @@
 
 /* dropdown5 = menu_inside */
 @media screen and (max-width: 743px) {
-  body {
-    margin: 10px;
-  }
   .dropdown5 {
     display: none;
   }
@@ -11,6 +8,7 @@
     display: flex;
     max-height: 0;
     overflow: hidden;
+    justify-content: center;
     padding-left: 160px;
     padding-right: 160px;
     margin-top: -3px;
@@ -26,9 +24,6 @@
   }
 }
 @media screen and (min-width: 744px) {
-  body {
-    margin: 10px;
-  }
   .dropdown5 {
     display: flex;
   }
@@ -75,15 +70,13 @@
   }
 }
 @media screen and (min-width: 1100px) {
-  body {
-    margin: 10px;
-  }
   .dropdown5 {
     display: none;
   }
   .nav {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     margin-top: 10px;
   }
   .menu {
@@ -265,7 +258,6 @@ nav .active:hover {
 }
 nav .nav {
   width: 100%;
-  justify-content: space-around;
   position: relative;
   border: 2px solid #000;
   background-color: #c4d5ed;
@@ -319,6 +311,9 @@ nav .x_btn {
   text-align: end;
 }
 
+body section {
+  width: 100%;
+}
 body .shows {
   display: flex;
   flex-direction: column;
@@ -419,6 +414,9 @@ footer .footerlinks a {
   margin-left: 10px;
 }
 
+body {
+  margin: 10px;
+}
 body h1 {
   font-size: xx-large;
   font-weight: bold;
