--- a/_media.scss
+++ b/_media.scss
@@ -1,7 +1,7 @@
 @use "base";
 /* dropdown5 = menu_inside */
 @media screen and (max-width: 743px) {
-  .dropdown5 {
+  .dropdown5 .dropbtn5 {
     display: none;
   }
   .nav {
@@ -9,19 +9,15 @@
     max-height: 0;
     overflow: hidden;
     justify-content: center;
-    padding-left: 160px;
-    padding-right: 160px;
+    padding-left: 100px;
+    padding-right: 100px;
     margin-top: -3px;
-    // align-items: flex-start;
   }
   .bluebox {
     display: none;
   }
   .menu {
     display: flex;
-  }
-  .dropbtn5 {
-    display: none;
   }
 }
 
