--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 
 /* dropdown5 = menu_inside */
 @media screen and (max-width: 743px) {
-  .dropdown5 {
+  .dropdown5 .dropbtn5 {
     display: none;
   }
   .nav {
@@ -9,8 +9,8 @@
     max-height: 0;
     overflow: hidden;
     justify-content: center;
-    padding-left: 160px;
-    padding-right: 160px;
+    padding-left: 100px;
+    padding-right: 100px;
     margin-top: -3px;
   }
   .bluebox {
@@ -18,9 +18,6 @@
   }
   .menu {
     display: flex;
-  }
-  .dropbtn5 {
-    display: none;
   }
 }
 @media screen and (min-width: 744px) {
@@ -273,7 +270,7 @@ nav .dropbtn0 {
   background-color: #c4d5ed;
   color: #000;
   font-weight: bold;
-  padding: 10px;
+  padding: 4px;
   font-size: 24px;
   border: none;
 }
