--- a/index.css
+++ b/index.css
@@ -444,11 +444,11 @@ section .kontaktpage {
   border: #000 8px solid;
   border-radius: 5px;
   padding: 10px 0px 0px 10px;
+  margin-top: 10px;
 }
 section .contactheading {
   font-weight: 700;
   margin-bottom: 0;
-  margin-top: 10px;
 }
 section .contactname {
   margin-bottom: 0;
@@ -463,5 +463,5 @@ section .info_container {
   border: #000 8px solid;
   border-radius: 5px;
   margin-top: 10px;
-  padding-left: 10px;
+  padding: 10px 0px 0px 10px;
 }/*# sourceMappingURL=index.css.map */
